Fixed colors and alignment issues

--- a/src/CSS/home-button.css
+++ b/src/CSS/home-button.css
@@ -1,27 +1,16 @@
 button{
-    position: relative;
-    display:block;
-    height: 45px;
-    width: 150px;
-    margin: 10px 7px;
-    padding: 5px 5px;
+    background-color: #8A47EB;
+    padding:10px;
     font-weight: 700;
     font-size: 15px;
-    letter-spacing: 2px;
-    border: 2px #426DFB solid;
-    text-shadow: 0 0 1vw #1041FF, 0 0 3vw #1041FF, 0 0 10vw #1041FF, 0 0 10vw #1041FF, 0 0 .4vw #8BFDFE, .5vw .5vw .1vw #147280;
-    color: #28D7FE;
-    border-radius: 4px;
-    text-transform: uppercase;
-    outline: 0;
-    overflow:hidden;
-    background: none;
+    color: white;
+    border-radius: 5px;
+    text-transform: none;
+    text-decoration: none;
+    border: 0;
+    width: auto;
+    min-width: 100px;
     cursor: pointer;
-    transition:         0.08s ease-in;
-    -o-transition:      0.08s ease-in;
-    -ms-transition:     0.08s ease-in;
-    -moz-transition:    0.08s ease-in;
-    -webkit-transition: 0.08s ease-in;
   }
 
   .buttonStart {
@@ -167,5 +156,3 @@ button{
   .svg:hover:after {
     top: 0;
   }
-
-  /*test on git commits*/
