--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -18,6 +18,7 @@
     font-family: "Avenir Next", "Avenir", sans-serif; /* General Font */
     font-weight:400;
     padding: 10px;
-    border:0.5px solid white;
+    border:0.5px solid black;
     display:inline-block;
+    color: black;
 }
